a bit of clean up, no logic changes